# dotenv-cpp-boilerplate

./: CMakeLists.txt  local-build.cmd  test.env
src/: main.cpp
